transport_sockets: add dynamic TLV support to PROXY protocol upstream socket via format strings
Signed-off-by: Rohit Agrawal <rohit.agrawal@databricks.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -538,6 +538,12 @@ new_features:
     <envoy_v3_api_field_config.core.v3.TlvEntry.format_string>` field. This allows TLV values to be
     populated dynamically from stream information using format strings (e.g., ``%DYNAMIC_METADATA(...)%``,
     ``%FILTER_STATE(...)%``, ``%DOWNSTREAM_REMOTE_ADDRESS%``).
+- area: transport_socket
+  change: |
+    Added support for dynamic TLV values in PROXY protocol transport socket using :ref:`format_string
+    <envoy_v3_api_field_config.core.v3.TlvEntry.format_string>` field. This allows TLV values in upstream
+    connections to be populated dynamically from stream information using format strings, enabling cluster-level
+    proxy protocol configurations with dynamic metadata, filter state, and other stream properties.
 - area: http
   change: |
     Added ``upstream_rq_per_cx`` histogram to track requests per connection for monitoring connection reuse efficiency.
