--- a/source/extensions/transport_sockets/proxy_protocol/BUILD
+++ b/source/extensions/transport_sockets/proxy_protocol/BUILD
@@ -30,11 +30,13 @@ envoy_cc_library(
     deps = [
         "//envoy/network:connection_interface",
         "//envoy/network:transport_socket_interface",
+        "//envoy/server:factory_context_interface",
         "//source/common/buffer:buffer_lib",
         "//source/common/common:hex_lib",
         "//source/common/common:scalar_to_byte_vector_lib",
         "//source/common/common:utility_lib",
         "//source/common/config:well_known_names",
+        "//source/common/formatter:substitution_format_string_lib",
         "//source/common/network:address_lib",
         "//source/extensions/common/proxy_protocol:proxy_protocol_header_lib",
         "//source/extensions/transport_sockets/common:passthrough_lib",
