--- a/test/extensions/transport_sockets/proxy_protocol/BUILD
+++ b/test/extensions/transport_sockets/proxy_protocol/BUILD
@@ -18,12 +18,14 @@ envoy_extension_cc_test(
     rbe_pool = "6gig",
     deps = [
         "//envoy/network:proxy_protocol_options_lib",
+        "//source/common/router:string_accessor_lib",
         "//source/extensions/common/proxy_protocol:proxy_protocol_header_lib",
         "//source/extensions/transport_sockets/proxy_protocol:upstream_proxy_protocol",
         "//test/mocks/buffer:buffer_mocks",
         "//test/mocks/network:io_handle_mocks",
         "//test/mocks/network:network_mocks",
         "//test/mocks/network:transport_socket_mocks",
+        "//test/mocks/server:factory_context_mocks",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/transport_sockets/proxy_protocol/v3:pkg_cc_proto",
     ],
