--- a/.github/workflows/envoy-release.yml
+++ b/.github/workflows/envoy-release.yml
@@ -19,6 +19,7 @@ on:
         type: choice
         options:
         - create-release
+        - reopen-branch
         - sync-version-histories
         - deprecate-guards
       dry-run:
@@ -131,6 +132,58 @@ jobs:
         title: >-
           [${{ (! inputs.summary || inputs.wip) && 'WIP/' || '' }}release/${{ steps.checkout.outputs.branch-name }}]
           repo: Release ${{ steps.release.outputs.version }}
+        GITHUB_TOKEN: ${{ steps.appauth.outputs.token }}
+
+  # Re-open a branch.
+  reopen-branch:
+    runs-on: ubuntu-24.04
+    if: github.event_name == 'workflow_dispatch' && inputs.task == 'reopen-branch'
+    name: Re-open branch
+    steps:
+    - id: appauth
+      name: App auth
+      uses: envoyproxy/toolshed/gh-actions/appauth@actions-v0.3.25
+      with:
+        app_id: ${{ secrets.ENVOY_CI_PUBLISH_APP_ID }}
+        key: ${{ secrets.ENVOY_CI_PUBLISH_APP_KEY }}
+    - id: checkout
+      name: Checkout Envoy repository
+      uses: envoyproxy/toolshed/gh-actions/github/checkout@actions-v0.3.25
+      with:
+        committer-name: ${{ env.COMMITTER_NAME }}
+        committer-email: ${{ env.COMMITTER_EMAIL }}
+        strip-prefix: release/
+        token: ${{ steps.appauth.outputs.token }}
+    - uses: envoyproxy/toolshed/gh-actions/github/run@actions-v0.3.25
+      name: Re-open branch
+      with:
+        command: >-
+          bazel
+          run
+          --config=ci
+          @envoy_repo//:dev
+          -- ${{ steps.checkout.outputs.branch-name != 'main' && '--patch' || '' }}
+    - run: |
+        VERSION=$(cat VERSION.txt | cut -d- -f1)
+        echo "version=v${VERSION}" >> $GITHUB_OUTPUT
+      name: Dev version
+      id: dev
+    - name: Create a PR
+      uses: envoyproxy/toolshed/gh-actions/github/pr@actions-v0.3.25
+      with:
+        base: ${{ github.ref_name }}
+        commit: false
+        append-commit-message: true
+        body: |
+          Created by Envoy publish bot for @${{ github.actor }}
+        branch: release/dev/${{ steps.checkout.outputs.branch-name }}
+        diff-upload: release-dev-${{ steps.checkout.outputs.branch-name }}
+        diff-show: true
+        dry-run: ${{ ! inputs.pr }}
+        wip: ${{ ! inputs.summary || inputs.wip }}
+        title: >-
+          [dev/${{ steps.checkout.outputs.branch-name }}]
+          repo: Dev ${{ steps.dev.outputs.version }}
         GITHUB_TOKEN: ${{ steps.appauth.outputs.token }}
 
   sync_version_histories:
