--- a/test/extensions/filters/http/mcp/BUILD
+++ b/test/extensions/filters/http/mcp/BUILD
@@ -31,7 +31,7 @@ envoy_cc_test(
 envoy_cc_test(
     name = "config_test",
     srcs = ["config_test.cc"],
-    rbe_pool = "6gig",
+    rbe_pool = "2core",
     deps = [
         "//source/extensions/filters/http/mcp:config",
         "//test/mocks/server:factory_context_mocks",
