--- a/source/extensions/extensions_metadata.yaml
+++ b/source/extensions/extensions_metadata.yaml
@@ -1721,65 +1721,23 @@ envoy.matching.inputs.transport_protocol:
   status: stable
   type_urls:
   - envoy.extensions.matching.common_inputs.network.v3.TransportProtocolInput
-envoy.matching.inputs.transport_socket.endpoint_metadata:
+envoy.matching.inputs.endpoint_metadata:
   categories:
   - envoy.matching.inputs
   security_posture: unknown
   status: stable
   type_urls:
   - envoy.extensions.matching.common_inputs.transport_socket.v3.EndpointMetadataInput
-envoy.matching.inputs.transport_socket.locality_metadata:
+envoy.matching.inputs.locality_metadata:
   categories:
   - envoy.matching.inputs
   security_posture: unknown
   status: stable
   type_urls:
   - envoy.extensions.matching.common_inputs.transport_socket.v3.LocalityMetadataInput
-envoy.matching.inputs.transport_socket.destination_ip:
-  categories:
-  - envoy.matching.inputs
-  security_posture: unknown
-  status: stable
-  type_urls:
-  - envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
-envoy.matching.inputs.transport_socket.source_ip:
-  categories:
-  - envoy.matching.inputs
-  security_posture: unknown
-  status: stable
-  type_urls:
-  - envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
-envoy.matching.inputs.transport_socket.destination_port:
-  categories:
-  - envoy.matching.inputs
-  security_posture: unknown
-  status: stable
-  type_urls:
-  - envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
-envoy.matching.inputs.transport_socket.source_port:
-  categories:
-  - envoy.matching.inputs
-  security_posture: unknown
-  status: stable
-  type_urls:
-  - envoy.extensions.matching.common_inputs.network.v3.SourcePortInput
-envoy.matching.inputs.transport_socket.server_name:
-  categories:
-  - envoy.matching.inputs
-  security_posture: unknown
-  status: stable
-  type_urls:
-  - envoy.extensions.matching.common_inputs.network.v3.ServerNameInput
 envoy.matching.inputs.application_protocol:
   categories:
   - envoy.matching.network.input
-  security_posture: unknown
-  status: stable
-  type_urls:
-  - envoy.extensions.matching.common_inputs.network.v3.ApplicationProtocolInput
-envoy.matching.inputs.application_protocols:
-  categories:
-  - envoy.matching.inputs
   security_posture: unknown
   status: stable
   type_urls:
