--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -597,5 +597,12 @@ new_features:
     is particularly useful when downstream instances are behind NATs, firewalls, or in private networks. The
     feature is experimental and under active development, but is ready for experimental use. See
     :ref:`reverse tunnel overview <overview_reverse_tunnel>` for details.
+- area: overload management
+  change: |
+    The fixed heap resource monitor now supports calculating memory pressure as the ratio of currently allocated memory
+    to the configured maximum heap size. This method gives more accurate and lower memory pressure values and can avoid
+    unnecessary load shedding.
+    To enable this behavior, set ``envoy.reloadable_features.fixed_heap_use_allocated`` to true.
+    By default, the previous method for calculating used memory is applied: heap_size - pageheap_unmapped - pageheap_free.
 
 deprecated:
