--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -116,8 +116,11 @@ minor_behavior_changes:
     4MB could be encoded, which most upstream grpc services would, by default, treat as an error.
 - area: ext_authz
   change: |
-    Check the request header count & size in kb after applying mutations is <= the configured limits
-    and reject the response if not.
+    Check the request header count after applying mutations is <= the configured limit and reject
+    the response if not.
+- area: router
+  change: |
+    Take into account connection-level metadata under the ``envoy.lb`` namespace when computing subset load balancing matches.
 
 bug_fixes:
 # *Changes expected to improve the state of the world and are unlikely to have negative effects*
