--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -8,9 +8,11 @@ behavior_changes:
     Envoy now uses the minimum of hardware threads, CPU affinity, and cgroup CPU limits
     to determine the number of worker threads by default. This provides better resource utilization in
     containerized environments (Docker, Kubernetes) where CPU limits are set via cgroups. The new behavior
-    is enabled by default and can be disabled by setting the runtime guard
-    ``envoy.restart_features.enable_cgroup_cpu_detection`` to ``false``. When disabled, Envoy will fall
-    back to the previous behavior of using only hardware thread count and CPU affinity for worker thread calculation.
+    is enabled by default and can be disabled by setting the ``ENVOY_CGROUP_CPU_DETECTION`` environment
+    variable to ``false``. When disabled, Envoy will fall back to the previous behavior of using only 
+    hardware thread count and CPU affinity for worker thread calculation. Uses conservative rounding (floor)
+    to account for non-worker threads and prevent container throttling. This can cause potential total connections
+    number drop. 
 - area: response_decoder
   change: |
     Updated EnvoyQuicClientStream and ResponseDecoderWrapper to use a handle to access the response decoder
