server: Add cgroup CPU detection integration tests for CI verification
Add CI-only integration tests to verify cgroup CPU detection works correctly
in containerized environments. Implementation follows reviewer feedback:

- Environment variable approach (ENVOY_CGROUP_CPU_DETECTION) instead of runtime flag
- Two-tier integration test strategy for comprehensive coverage
- CI-only execution with linux_x64_small RBE pool (2 CPUs)
- Follows exact ServerInstanceImplTest::Stats patterns for concurrency testing
- Explicit assertions expecting exactly 2 CPUs for RBE pool (EXPECT_EQ(2L, concurrency))

Tests added:
1. cgroup_cpu_simple_integration_test.cc - Lightweight direct cgroup API testing
   - Tests CgroupDetectorImpl::getCpuLimit() directly
   - Verifies environment variable disable functionality
   - Validates singleton pattern behavior
   - Minimal dependencies (filesystem + cgroup utility only)

2. cgroup_server_integration_test.cc - Full server integration testing
   - Tests server concurrency auto-detection from cgroups (default behavior)
   - Verifies server.concurrency gauge reflects auto-detected values
   - Tests explicit concurrency override behavior
   - Uses complete ServerInstanceImplTestBase infrastructure

Configuration changes:
- .bazelrc: Exclude engflow_only tests from local builds via --test_tag_filters
- Both tests tagged engflow_only, no-sandbox for CI-only execution
- Automatic CI environment detection with local skip capability
- Fixed trailing whitespace in changelogs/current.yaml for formatting compliance

This fills a gap in existing test coverage by being the first integration tests
to verify default concurrency auto-detection behavior (when --concurrency flag
is not explicitly set). Tests validate that cgroup CPU detection properly
affects server concurrency calculation in real containerized CI environments
while having zero impact on local development workflows.

The explicit EXPECT_EQ(2L, concurrency) assertions ensure tests will clearly
fa

--- a/.bazelrc
+++ b/.bazelrc
@@ -64,6 +64,9 @@ build --incompatible_enforce_config_setting_visibility
 test --test_verbose_timeout_warnings
 test --experimental_ui_max_stdouterr_bytes=11712829 #default 1048576
 
+# Exclude CI-only tests from local builds
+test --test_tag_filters=-engflow_only
+
 # Allow tags to influence execution requirements
 common --experimental_allow_tags_propagation
 
