--- a/test/extensions/bootstrap/reverse_tunnel/upstream_socket_interface/BUILD
+++ b/test/extensions/bootstrap/reverse_tunnel/upstream_socket_interface/BUILD
@@ -64,8 +64,14 @@ envoy_cc_test(
     size = "medium",
     srcs = ["upstream_reverse_connection_io_handle_test.cc"],
     deps = [
+        "//source/common/network:utility_lib",
         "//source/extensions/bootstrap/reverse_tunnel/upstream_socket_interface:reverse_tunnel_acceptor_lib",
         "//test/mocks/network:network_mocks",
+        "//test/mocks/server:factory_context_mocks",
+        "//test/mocks/stats:stats_mocks",
+        "//test/mocks/thread_local:thread_local_mocks",
+        "//test/test_common:logging_lib",
+        "//test/test_common:registry_lib",
     ],
 )
 
