--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -635,5 +635,13 @@ new_features:
     is particularly useful when downstream instances are behind NATs, firewalls, or in private networks. The
     feature is experimental and under active development, but is ready for experimental use. See
     :ref:`reverse tunnel overview <overview_reverse_tunnel>` for details.
+- area: compressor
+  change: |
+    Added (:ref:`status_header_enabled
+    <envoy_v3_api_field_extensions.filters.http.compressor.v3.Compressor.ResponseDirectionConfig.status_header_enabled>`)
+    to Compressor Filter. When enabled it adds new response header x-envoy-compression-status to the compressor_filter.
+    This header provides information on whether the response was compressed and, if not, the reason why compression was skipped.
+    Enabling this feature alters the order of conditions checked within the compressor filter is altered
+    to emit the most appropriate status reason.
 
 deprecated:
