--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -474,6 +474,12 @@ new_features:
     authorization service.
 - area: ext_authz
   change: |
+    Added support for retry policy in the ``ext_authz`` HTTP filter. The filter now supports
+    :ref:`retry_policy <envoy_v3_api_field_extensions.filters.http.ext_authz.v3.HttpService.retry_policy>`
+    configuration for HTTP authorization servers. When configured, failed requests to the authorization server
+    will be automatically retried according to the specified policy.
+- area: ext_authz
+  change: |
     Added
     :ref:`max_denied_response_body_bytes <envoy_v3_api_field_extensions.filters.http.ext_authz.v3.ExtAuthz.max_denied_response_body_bytes>`
     to the ``ext_authz`` HTTP filter. This allows configuring the maximum size of the response body
