--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -5,6 +5,12 @@ behavior_changes:
 
 minor_behavior_changes:
 # *Changes that may cause incompatibilities for some users, but should not for most*
+- area: ext_proc
+  change: |
+    Use one of a hard-coded set of error messages when a :ref:`HeaderMutation
+    <envoy_v3_api_msg_service.ext_proc.v3.HeaderMutation>` fails. Removing
+    request-specific details allows grouping by similar failure types. Detailed
+    messages remain available in debug logs.
 
 bug_fixes:
 # *Changes expected to improve the state of the world and are unlikely to have negative effects*
