--- a/.github/workflows/mobile-cc_tests.yml
+++ b/.github/workflows/mobile-cc_tests.yml
@@ -53,22 +53,7 @@ jobs:
         //test/cc/... //test/common/...
       request: ${{ needs.load.outputs.request }}
       target: cc-tests
-
-  cc-xds-integration-tests:
-    permissions:
-      contents: read
-      packages: read
-    if: ${{ needs.load.outputs.request && fromJSON(needs.load.outputs.request).run.mobile-cc }}
-    needs: load
-    name: cc-xds-integration-tests
-    uses: ./.github/workflows/_mobile_container_ci.yml
-    with:
-      args: >-
-        test
-        --config=mobile-remote-ci-cc-xds-enabled
-        //test/common/integration/...
-      request: ${{ needs.load.outputs.request }}
-      target: cc-xds-integration-tests
+      timeout-minutes: 120
 
   request:
     secrets:
@@ -87,7 +72,6 @@ jobs:
     needs:
     - load
     - cc-tests
-    - cc-xds-integration-tests
     uses: ./.github/workflows/_finish.yml
     with:
       needs: ${{ toJSON(needs) }}
