server: implement cgroup CPU detection for container-aware concurrency
Add cgroup CPU limit detection to enable container-aware server concurrency
configuration. This allows Envoy to automatically detect CPU limits in
containerized environments (Docker, Kubernetes) and adjust worker threads
accordingly.

Key changes:
- Add CgroupCpuUtil class with cgroup v1/v2 filesystem parsing
- Support both /sys/fs/cgroup/cpu and unified cgroup v2 hierarchies
- Implement conservative CPU limit detection with floor rounding
- Add CI-only integration test with engflow_only tag filtering
- Configure tag override mechanism for EngFlow RBE execution

The implementation provides graceful fallback when cgroups are unavailable,
ensuring compatibility across different deployment environments.

Testing: Integration test runs only in CI environments with proper Docker
CPU limits configured via --cpus parameter.

Signed-off-by: Premnath Nenavath <premnath.nenavath@samsara.com>
Signed-off-by: premnath.nenavath <premnath.nenavath@gomotive.com>

--- a/test/server/BUILD
+++ b/test/server/BUILD
@@ -301,17 +301,11 @@ envoy_cc_test(
     name = "cgroup_cpu_simple_integration_test",
     srcs = ["cgroup_cpu_simple_integration_test.cc"],
     rbe_pool = "linux_x64_small",
-    tags = [
-        "engflow_only",
-        "no-sandbox",
-    ],
+    tags = ["engflow_only"],
     deps = [
-        "//source/common/filesystem:filesystem_lib",
+        "//source/server:cgroup_cpu_util_lib",
         "//test/test_common:environment_lib",
-    ] + select({
-        "@platforms//os:linux": ["//source/server:cgroup_cpu_util_lib"],
-        "//conditions:default": [],
-    }),
+    ],
 )
 
 envoy_cc_test(
