--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -12,8 +12,8 @@ minor_behavior_changes:
     messages remain available in debug logs.
 - area: ext_proc
   change: |
-    Closing the gRPC stream if Envoy detects no more external processing needed. This behavior can be
-    reverted by setting the runtime guard
+    Closing the gRPC stream if Envoy detects no more external processing needed.
+    This behavior can be reverted by setting the runtime guard
     ``envoy.reloadable_features.ext_proc_stream_close_optimization`` to ``false``.
 
 bug_fixes:
