--- a/.github/workflows/_load.yml
+++ b/.github/workflows/_load.yml
@@ -83,7 +83,9 @@ jobs:
       trusted: ${{ fromJSON(steps.request-output.outputs.value).request.trusted }}
       skip: ${{ fromJSON(steps.request-output.outputs.value).check.action != 'RUN' }}
     steps:
-    - run: |
+    - env:
+  SAFE_VAR: "$SAFE_VAR"
+run: |
         gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
