Use allocated memory for fixed heap pressure (#41442)
After applying this PR the fixed heap resource monitor will use
allocated memory for memory pressure calculation, so reported pressure
is lower and more accurate. This can prevent unnecessary load shedding
when there is enough free memory.
New formula is simply: `currently_allocated / max_heap_size` and it does
not include any overhead that allocations might have.
See
https://github.com/envoyproxy/envoy/issues/21923#issuecomment-3378633585
for background.
**Risk Level:** Low
**Testing:** test case added
**Docs Changes:**
**Release Notes:**
**Runtime guard:** `envoy.reloadable_features.fixed_heap_use_allocated`.
Default value is `false`.

Fixes #21923

---------

Signed-off-by: Tero Saarni <tero.saarni@gmail.com>
Signed-off-by: Tero Saarni <tero.saarni@est.tech>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -48,5 +48,12 @@ new_features:
   change: |
     Added ``sign`` foreign function to create cryptographic signatures.
     See :ref:`Wasm foreign functions <arch_overview_wasm_foreign_functions>` for more details.
+- area: overload management
+  change: |
+    The fixed heap resource monitor can now calculate memory pressure as currently allocated memory divided by maximum heap size,
+    giving more accurate and lower memory pressure values.
+    This can avoid unnecessary load shedding or overload actions.
+    To enable, set ``envoy.reloadable_features.fixed_heap_use_allocated`` to true.
+    The default algorithm (heap_size - pageheap_unmapped - pageheap_free) does not discount for free memory in TCMalloc caches.
 
 deprecated:
