[redis filter] Add cluster-scope command support with flexible response handling framework (#41381)
This commit introduces a comprehensive framework for handling Redis
cluster-scope commands (CONFIG, SLOWLOG, SCRIPT, FLUSHALL, FLUSHDB) that
need to be broadcast to all shards with specialized response aggregation
logic.

**Additional Description**
_Problem Statement_

Previously, Redis cluster-scope commands were not properly supported.
These commands need to:

Be sent to all shards in the cluster
Have responses aggregated according to command-specific logic
Handle partial failures gracefully

**Design Approach**

1. Strategy Pattern for Response Handling
Implemented a flexible response handler framework using the Strategy and
Template Method patterns:

BaseClusterScopeResponseHandler: Abstract base class providing common
response collection logic via template method pattern
AllshardSameResponseHandler: Validates all shards return identical
responses (e.g., CONFIG SET, FLUSHALL)
IntegerSumAggregateResponseHandler: Sums integer responses across shards
(e.g., SLOWLOG LEN)
ArrayMergeAggregateResponseHandler: Merges array responses from all
shards (e.g., SLOWLOG GET, CONFIG GET)

2. Factory Pattern for Handler Creation
ClusterResponseHandlerFactory dynamically creates appropriate handlers
based on command and subcommand, enabling easy extensibility for new
commands.

3. Command Routing Architecture

Added ClusterScopeCommands() to SupportedCommands for command
classification
Created ClusterScopeCmdRequest class that broadcasts commands to all
shards
Implemented subcommand validation via commandSubcommandValidationMap()
to restrict unsupported subcommand variants, this helpus restrict
certain subcommands from being implemented

4. Key Design Decisions

Separation of Concerns: Response handling logic is isolated from request
routing logic
Extensibility: New cluster-scope commands require only adding handler
logic and factory mapping
Error Handling: Failures are converted t

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -48,6 +48,9 @@ new_features:
   change: |
     Added ``sign`` foreign function to create cryptographic signatures.
     See :ref:`Wasm foreign functions <arch_overview_wasm_foreign_functions>` for more details.
+- area: redis
+  change: |
+    Added cluster-scope command support with flexible response handling framework.
 - area: overload management
   change: |
     The fixed heap resource monitor can now calculate memory pressure as currently allocated memory divided by maximum heap size,
