--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -35,5 +35,9 @@ removed_config_or_runtime:
     Removed runtime guard ``envoy.reloadable_features.original_src_fix_port_exhaustion`` and legacy code paths.
 
 new_features:
+- area: logging
+  change: |
+    Added support for not-equal operator for access log filter rules, in
+    :ref:`ComparisonFilter <envoy_v3_api_msg_config.accesslog.v3.ComparisonFilter>`.
 
 deprecated:
