--- a/test/fuzz/BUILD
+++ b/test/fuzz/BUILD
@@ -91,19 +91,10 @@ envoy_cc_test_library(
     ],
 )
 
-envoy_cc_test_library(
-    name = "validated_input_generator_lib",
-    srcs = ["validated_input_generator.cc"],
-    hdrs = ["validated_input_generator.h"],
-    deps = [
-        "//test/fuzz:mutable_visitor_lib",
-        "//test/fuzz:random_lib",
-        "@com_envoyproxy_protoc_gen_validate//validate:cc_validate",
-        "@com_github_cncf_xds//udpa/type/v1:pkg_cc_proto",
-        "@com_github_cncf_xds//xds/type/v3:pkg_cc_proto",
-        "@com_github_google_libprotobuf_mutator//:libprotobuf_mutator",
-    ],
-)
+# Note: validated_input_generator_lib has been removed as part of the protoc-gen-validate
+# to protovalidate migration. The library was deeply coupled to PGV's code generation model
+# which is incompatible with protovalidate's runtime validation approach. Fuzz tests now
+# rely solely on libprotobuf-mutator for input generation.
 
 envoy_cc_test_library(
     name = "random_lib",
