--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -38,6 +38,9 @@ removed_config_or_runtime:
 - area: jwt_authn
   change: |
     Removed runtime guard ``envoy.reloadable_features.jwt_fetcher_use_scheme_from_uri`` and legacy code paths.
+- area: tcp
+  change: |
+    Removed runtime guard ``envoy.reloadable_features.tcp_proxy_retry_on_different_event_loop`` and legacy code paths.
 - area: http
   change: |
     Removed runtime guard ``envoy.reloadable_features.http1_balsa_allow_cr_or_lf_at_request_start`` and legacy code paths.
